# Boot--p-

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/boot_manager/: CMakeLists.txt  boot_manager.c  boot_manager.h
components/ota_manager/: CMakeLists.txt  ota_manager.c  ota_manager.h
components/web_server/: CMakeLists.txt  web_server.c  web_server.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  app_version.h  main.c
web_ui/: app.js  index.html  style.css
